--- a/destinos-2.html
+++ b/destinos-2.html
@@ -83,6 +83,7 @@
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-heart"></span></div></div>
 						<div class="media-body p-2 mt-2">
 							<h3 class="heading mb-3">Mejores experiencias</h3>
+							<!-- Rellenas textos Aqui -->
 							<p>A small river named Duden flows by their place and supplies.</p>
 						</div>
 					</div>
@@ -92,6 +93,7 @@
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-user"></span></div></div>
 						<div class="media-body p-2 mt-2">
 							<h3 class="heading mb-3">Guia de viajes</h3>
+							<!-- Rellenas textos Aqui -->
 							<p>A small river named Duden flows by their place and supplies.</p>
 						</div>
 					</div>
@@ -101,6 +103,7 @@
 						<div class="d-flex content_icon justify-content-center"><div class="icon"><span class="flaticon-support"></span></div></div>
 						<div class="media-body p-2 mt-2">
 							<h3 class="heading mb-3">Soporte dedicado</h3>
+							<!-- Rellenas textos Aqui -->
 							<p>A small river named Duden flows by their place and supplies.</p>
 						</div>
 					</div>
@@ -568,7 +571,6 @@
             </div>
         </div>
     </footer>
-
 	<!-- edn destination -->
 	<!-- SCRIPTS -->
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
